test(back): add unit and integration tests for new categories endpoints and related service